# keepsake

./: .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: android-test.yml  release.yml
docs/: CNAME  index.html
docs/privacy/: index.html
scripts/: make-demo.mjs  smoke-kdbx.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: biometric.rs  lib.rs
src/components/: EntryAvatar.vue  EntryDetail.vue  EntryList.vue  GroupTreeNode.vue  HelpOverlay.vue  PasswordGenerator.vue  PromptModal.vue  SearchPalette.vue  Sidebar.vue  Toast.vue  UnlockScreen.vue
src/lib/: argon2.worker.ts  biometric.ts  dropbox.ts  fuzzy.ts  kdbx.ts  platform.ts  types.ts
src/stores/: vault.ts
