[package]
name = "app"
version = "1.0.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2.5.4"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-local-authentication = "0.3.2"
security-framework = "3.6.0"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.3.2"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0"
jni = "0.21"
keyring-core = "1.0"
ndk-context = "0.1"
